--- a/landing.css
+++ b/landing.css
@@ -28,12 +28,20 @@ a {
     margin-top: 2rem;
 }
 
+.category-title {
+    text-align: left;
+    font-size: 2.5rem;
+    color: var(--content-color);
+    margin-top: 5rem;
+    width: 100%;
+}
+
 .quiz-item {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    margin-top: 5rem;
+    margin-top: 5px;
 }
 
 .quiz-img {
