--- a/landing.css
+++ b/landing.css
@@ -1,3 +1,8 @@
+a {
+    text-decoration: none;
+    color: var(--content-color);
+}
+
 .theme {
     font-size: 2rem;
     color: var(--content-color);
@@ -23,12 +28,20 @@
     margin-top: 2rem;
 }
 
+.category-title {
+    text-align: left;
+    font-size: 2.5rem;
+    color: var(--content-color);
+    margin-top: 5rem;
+    margin-left: 8rem;
+}
+
 .quiz-item {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    margin-top: 5rem;
+    margin-top: 5px;
 }
 
 .quiz-img {
@@ -66,6 +79,16 @@
     pointer-events: all;
     cursor: pointer;
     margin-top: auto;
+}
+
+.take-quiz {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.take-quiz i {
+    margin-left: 1rem;
 }
 
 .take-quiz:hover {
