--- a/rule-page/rule.css
+++ b/rule-page/rule.css
@@ -10,3 +10,10 @@
     margin-left: 8rem;
     font-weight: 500;
 }
+
+.take-quiz {
+    margin-top: 5rem;
+    font-size: 3rem;
+    color: var(--content-color);
+    cursor: pointer;
+}
