--- a/landing.css
+++ b/landing.css
@@ -28,70 +28,51 @@ a {
     margin-top: 2rem;
 }
 
-.category-title {
-    text-align: left;
-    font-size: 2.5rem;
+.category-subtitle {
+    text-align: center;
+    font-size: 3rem;
     color: var(--content-color);
-    margin-top: 5rem;
-    margin-left: 8rem;
+    margin-top: 10rem;
 }
 
-.quiz-item {
+.category-selector {
+    margin-top: 1rem;
     display: flex;
     align-items: center;
     justify-content: center;
+    gap: 2rem;
     flex-wrap: wrap;
-    margin-top: 5px;
 }
 
-.quiz-img {
-    height: 20rem;
-    width: auto;
-}
-
-.quiz-item .card-img {
-    object-fit: fill;
-}
-
-.quiz-item .card-container.product-card {
-    width: 35rem;
-    height: 35rem;
-    background-color: var(--for-quiz);
-}
-
-.quiz-item .card-title,
-.quiz-item .card-subtitle,
-.quiz-item .card-description {
+.category-title {
+    text-align: center;
+    font-size: 2.5rem;
     color: var(--content-color);
-    margin-right: 2rem;
-    padding: 5px 2rem;
-}
-
-.quiz-item .card-title {
-    font-size: 1.5rem;
-    font-weight: 500;
-    /* margin-top: auto; */
-}
-
-.quiz-item .card-description {
-    display: flex;
-    justify-content: space-between;
-    pointer-events: all;
+    margin-top: 2rem;
+    background-color: var(--for-quiz);
+    padding: 5rem;
+    width: 25rem;
+    border-radius: 2rem;
     cursor: pointer;
-    margin-top: auto;
+    border: none;
+}
+
+.category-title:hover {
+    color: var(--primary-color);
+    transition: 0.2s ease-in-out;
 }
 
 .take-quiz {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .take-quiz i {
-    margin-left: 1rem;
+  margin-left: 1rem;
 }
 
 .take-quiz:hover {
-    color: var(--primary-color);
-    transition: 0.2s ease-in-out;
+  color: var(--primary-color);
+  transition: 0.2s ease-in-out;
 }
